[gd_scene load_steps=2 format=3 uid="uid://c7t0t4lbjup7v"]

[ext_resource type="Script" path="res://src/UI/gameUI.gd" id="1_se5o0"]

[node name="GameUI" type="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_se5o0")

[node name="PlayerWhite" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelWhite"
text = "Player White
"
horizontal_alignment = 1

[node name="PlayerWhiteTime" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelWhite"
text = "00:00
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Undo" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Undo"

[node name="Draw" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Draw"

[node name="Resign" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Resign"

[node name="GameInfo" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PtnDisplay" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="PlayerBlack" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelBlack"
text = "Player Black
"
horizontal_alignment = 1

[node name="PlayerBlackTime" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelBlack"
text = "00:00
"
horizontal_alignment = 1

[node name="TimerWhite" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TimerBlack" type="Timer" parent="."]
one_shot = true
autostart = true
